--- a/HW_1.ipynb
+++ b/HW_1.ipynb
@@ -59,6 +59,72 @@
    "source": [
     "print(fruit_warehouse(apples=10, pears=5, bananas=4))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задача 3\n",
+    "\n",
+    "Дан список с затратами на рекламу. Но в данных есть ошибки, некоторые затраты имеют отрицательную величину. \n",
+    "Удалите такие значения из списка и посчитайте суммарные затраты\n",
+    "[100, 125, -90, 345, 655, -1, 0, 200]\n",
+    "Используйте list comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def expenses (data: list):\n",
+    "    new_data = []\n",
+    "    for i in data:\n",
+    "        if i > 0:\n",
+    "            new_data.append(i)\n",
+    "    print(new_data)\n",
+    "    print(f'Total expenses: {sum(new_data)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 125, 345, 655, 200]\n",
+      "Total expenses: 1425\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [100, 125, -90, 345, 655, -1, 0, 200]\n",
+    "expenses(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 125, 345, 655, 200]\n",
+      "Total expenses: 1425\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([i for i in data if i > 0 ])\n",
+    "print(f'Total expenses: {sum([i for i in data if i > 0 ])}')"
+   ]
   }
  ],
  "metadata": {
