--- a/HW_1.ipynb
+++ b/HW_1.ipynb
@@ -125,6 +125,104 @@
     "print([i for i in data if i > 0 ])\n",
     "print(f'Total expenses: {sum([i for i in data if i > 0 ])}')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задача 4\n",
+    "\n",
+    "Даны два списка:\n",
+    "\n",
+    "Дата покупки\n",
+    "['2021-09-14', '2021-12-15', '2021-09-08', '2021-12-05', '2021-10-09', '2021-09-30', '2021-12-22', '2021-11-29', '2021-12-24', '2021-11-26', '2021-10-27', '2021-12-18', '2021-11-09', '2021-11-23', '2021-09-27', '2021-10-02', '2021-12-27', '2021-09-20', '2021-12-13', '2021-11-01', '2021-11-09', '2021-12-06', '2021-12-08', '2021-10-09', '2021-10-31', '2021-09-30', '2021-11-09', '2021-12-13', '2021-10-26', '2021-12-09']\n",
+    "\n",
+    "Суммы покупок по датам\n",
+    "[1270, 8413, 9028, 3703, 5739, 4095, 295, 4944, 5723, 3701, 4471, 651, 7037, 4274, 6275, 4988, 6930, 2971, 6592, 2004, 2822, 519, 3406, 2732, 5015, 2008, 316, 6333, 5700, 2887]\n",
+    "\n",
+    "### 4.2 Найдите выручку компании в зависимости от месяца\n",
+    "Для этого напишите функцию, которая на вход принимает список с датами и список с выручкой, \n",
+    "а на выходе словарь, где ключи - это месяцы, а значения - это выручка.\n",
+    "Используйте аннотирование типов."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1 Найдите, какая выручка у компании в ноябре\n",
+    "Используйте list comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = ['2021-09-14', '2021-12-15', '2021-09-08', '2021-12-05', '2021-10-09','2021-09-30', '2021-12-22',\n",
+    "        '2021-11-29', '2021-12-24', '2021-11-26', '2021-10-27', '2021-12-18', '2021-11-09', '2021-11-23',\n",
+    "        '2021-09-27', '2021-10-02', '2021-12-27', '2021-09-20', '2021-12-13', '2021-11-01','2021-11-09',\n",
+    "        '2021-12-06', '2021-12-08', '2021-10-09', '2021-10-31', '2021-09-30', '2021-11-09', '2021-12-13',\n",
+    "        '2021-10-26', '2021-12-09']\n",
+    "cost = [1270, 8413, 9028, 3703, 5739, 4095, 295, 4944, 5723, 3701, 4471, 651, 7037,\n",
+    "        4274, 6275, 4988, 6930, 2971, 6592, 2004, 2822, 519, 3406, 2732, 5015, 2008, \n",
+    "        316, 6333, 5700, 2887]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def november(data1: list, data2: list) -> list:\n",
+    "    new_data = []\n",
+    "    for i in range(len(data1)-1):\n",
+    "        if '-11-' in data1[i]:\n",
+    "            new_data.append(data2[i])\n",
+    "    return new_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4944, 3701, 7037, 4274, 2004, 2822, 316]\n",
+      "Profit: 25098\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(november(date, cost))\n",
+    "print(f'Profit: {sum(november(date, cost))}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4944, 3701, 7037, 4274, 2004, 2822, 316]\n",
+      "Profit: 25098\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([cost[i] for i in range(0, len(date)-1) if \"-11\" in date[i]])\n",
+    "print(f'Profit: {sum([cost[i] for i in range(len(date)-1) if \"-11\" in date[i]])}')"
+   ]
   }
  ],
  "metadata": {
