--- a/HW_1.ipynb
+++ b/HW_1.ipynb
@@ -139,12 +139,7 @@
     "['2021-09-14', '2021-12-15', '2021-09-08', '2021-12-05', '2021-10-09', '2021-09-30', '2021-12-22', '2021-11-29', '2021-12-24', '2021-11-26', '2021-10-27', '2021-12-18', '2021-11-09', '2021-11-23', '2021-09-27', '2021-10-02', '2021-12-27', '2021-09-20', '2021-12-13', '2021-11-01', '2021-11-09', '2021-12-06', '2021-12-08', '2021-10-09', '2021-10-31', '2021-09-30', '2021-11-09', '2021-12-13', '2021-10-26', '2021-12-09']\n",
     "\n",
     "Суммы покупок по датам\n",
-    "[1270, 8413, 9028, 3703, 5739, 4095, 295, 4944, 5723, 3701, 4471, 651, 7037, 4274, 6275, 4988, 6930, 2971, 6592, 2004, 2822, 519, 3406, 2732, 5015, 2008, 316, 6333, 5700, 2887]\n",
-    "\n",
-    "### 4.2 Найдите выручку компании в зависимости от месяца\n",
-    "Для этого напишите функцию, которая на вход принимает список с датами и список с выручкой, \n",
-    "а на выходе словарь, где ключи - это месяцы, а значения - это выручка.\n",
-    "Используйте аннотирование типов."
+    "[1270, 8413, 9028, 3703, 5739, 4095, 295, 4944, 5723, 3701, 4471, 651, 7037, 4274, 6275, 4988, 6930, 2971, 6592, 2004, 2822, 519, 3406, 2732, 5015, 2008, 316, 6333, 5700, 2887]"
    ]
   },
   {
@@ -222,6 +217,42 @@
    "source": [
     "print([cost[i] for i in range(0, len(date)-1) if \"-11\" in date[i]])\n",
     "print(f'Profit: {sum([cost[i] for i in range(len(date)-1) if \"-11\" in date[i]])}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 Найдите выручку компании в зависимости от месяца\n",
+    "Для этого напишите функцию, которая на вход принимает список с датами и список с выручкой, \n",
+    "а на выходе словарь, где ключи - это месяцы, а значения - это выручка.\n",
+    "Используйте аннотирование типов."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'09': 25647, '12': 45452, '10': 28645, '11': 25098}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def profits(data1: list, data2: list) -> dict:\n",
+    "        profits = {}\n",
+    "        for i in range(len(data1)):\n",
+    "            if date[i].split('-')[1] in profits.keys():\n",
+    "                profits[date[i].split('-')[1]] += cost[i]\n",
+    "            else:\n",
+    "                profits[date[i].split('-')[1]] = cost[i]\n",
+    "        return profits\n",
+    "print(profits(date, cost))"
    ]
   }
  ],
